// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package connect.batch.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option (google.api.resource_definition) = {
  type: "batch.google.com/Project"
  pattern: "projects/{project}"
};
option (google.api.resource_definition) = {
  type: "batch.google.com/Network"
  pattern: "projects/{project}/global/networks/{network}"
};
option (google.api.resource_definition) = {
  type: "batch.google.com/Subnetwork"
  pattern: "projects/{project}/regions/{region}/subnetworks/{subnetwork}"
};
option (google.api.resource_definition) = {
  type: "batch.google.com/Region"
  pattern: "projects/{project}/regions/{region}"
};
option (google.api.resource_definition) = {
  type: "batch.google.com/Location"
  pattern: "projects/{project}/locations/{location}"
};
option (google.api.resource_definition) = {
  type: "batch.googleapis.com/Job"
  pattern: "projects/{project}/locations/{location}/jobs/{job}"
};
option (google.api.resource_definition) = {
  type: "batch.google.com/TaskGroup"
  pattern: "projects/{project}/locations/{location}/jobs/{job}/taskGroups/{taskGroup}"
};
option (google.api.resource_definition) = {
  type: "batch.googleapis.com/Task"
  pattern: "projects/{project}/locations/{location}/jobs/{job}/taskGroups/{task_group}/tasks/{task}"
};

// BatchJobStateChangedEvent is emitted when a job's state changes.
message BatchJobStateChangedEvent {
  // Output only. Job name.
  // For example: "projects/123456/locations/us-central1/jobs/job01".
  string job_name = 1 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY,
    // resource reference
    (google.api.resource_reference) = {
      // resource type
      type: "batch.googleapis.com/Job"
    }
  ];

  // Output only. Job UID.
  string job_uid = 2 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Output only. Job's old state.
  State old_job_state = 3 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Output only. Job's new state.
  State new_job_state = 4 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Valid Job states.
  enum State {
    // Job state unspecified.
    STATE_UNSPECIFIED = 0;

    // Job is admitted (validated and persisted) and waiting for resources.
    QUEUED = 1;

    // Job is scheduled to run as soon as resource allocation is ready.
    // The resource allocation may happen at a later time but with a high
    // chance to succeed.
    SCHEDULED = 2;

    // Resource allocation has been successful. At least one Task in the Job is
    // RUNNING.
    RUNNING = 3;

    // All Tasks in the Job have finished successfully.
    SUCCEEDED = 4;

    // At least one Task in the Job has failed.
    FAILED = 5;

    // The Job will be deleted, but has not been deleted yet. Typically this is
    // because resources used by the Job are still being cleaned up.
    DELETION_IN_PROGRESS = 6;
  }
}

// BatchTaskStateChangedEvent is emitted when a task's state changes.
message BatchTaskStateChangedEvent {
  // Task name.
  // The name is generated from the parent TaskGroup name and 'id' field.
  // For example:
  // "projects/123456/locations/us-west1/jobs/job01/taskGroups/group01/tasks/task01".
  string task_name = 1 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY,
    // resource reference
    (google.api.resource_reference) = {
      // resource type
      type: "batch.googleapis.com/Task",
    }
  ];

  // Output only. Task UID.
  string task_uid = 2 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Output only. Task's old state.
  State old_task_state = 3 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Output only. Task's new state.
  State new_task_state = 4 [
    // field behavior
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // Task states.
  enum State {
    // Unknown state.
    STATE_UNSPECIFIED = 0;

    // The Task is created and waiting for resources.
    PENDING = 1;

    // The Task is assigned to at least one VM.
    ASSIGNED = 2;

    // The Task is running.
    RUNNING = 3;

    // The Task has failed.
    FAILED = 4;

    // The Task has succeeded.
    SUCCEEDED = 5;

    // The Task has not been executed when the Job finishes.
    UNEXECUTED = 6;
  }
}
